--- a/configs/wofi/style/style-dark.css
+++ b/configs/wofi/style/style-dark.css
@@ -1,8 +1,8 @@
 window {
     margin: 0px;
-    border: 5px solid #1e1e2e;
-    background-color: #cdd6f4;
-    border-radius: 0px;
+    border: 5px solid #640000;
+    background-color: #000000;
+    border-radius: 1px;
 }
 
 #input {
