--- a/configs/wofi/style/style-dark.css
+++ b/configs/wofi/style/style-dark.css
@@ -12,9 +12,9 @@ window {
     border: none;
     color: #cdd6f4;
     font-weight: bold;
-    background-color: #1e1e2e;
+    background-color: #000000;
    	outline: none;
-    border-radius: 15px;
+    border-radius: 8px;
     margin: 10px;
     margin-bottom: 2px;
 }
@@ -25,7 +25,7 @@ window {
 
 #inner-box {
     margin: 4px;
-    border: 10px solid #1e1e2e;
+    border: 2px solid #e00000;
     color: #cdd6f4;
     font-weight: bold;
     background-color: #1e1e2e;
