--- a/configs/wofi/style/style.css
+++ b/configs/wofi/style/style.css
@@ -1,75 +1,46 @@
+*{
+    font-family: monospace;
+}
+
 window {
-    margin: 0px;
-    border: 5px solid #640000;
     background-color: #000000;
-    border-radius: 1px;
 }
 
 #input {
-    padding: 4px;
-    margin: 4px;
-    padding-left: 20px;
+    margin: 5px;
+    border-radius: 0px;
     border: none;
-    color: #cdd6f4;
-    font-weight: bold;
+    border-bottom: 3px solid black;
     background-color: #000000;
-   	outline: none;
-    border-radius: 8px;
-    margin: 10px;
-    margin-bottom: 2px;
-}
-#input:focus {
-    border: 0px solid #1e1e2e;
-    margin-bottom: 0px;
+    color: white;
 }
 
 #inner-box {
-    margin: 4px;
-    border: 2px solid #e00000;
-    color: #cdd6f4;
-    font-weight: bold;
     background-color: #000000;
-    border-radius: 15px;
+
 }
 
 #outer-box {
-    margin: 0px;
-    border: none;
-    border-radius: 15px;
+    margin: 5px;
+    padding:20px;
     background-color: #000000;
 }
 
 #scroll {
-    margin-top: 5px;
-    border: none;
-    border-radius: 15px;
-    margin-bottom: 5px;
-    /* background: rgb(255,255,255); */
 }
 
-#img:selected {
-    background-color: #89b4fa;
-    border-radius: 15px;
+#text {
+padding: 5px;
+color: white;
 }
 
-#text:selected {
-    color: #ffffff;
-    margin: 0px 0px;
-    border: none;
-    border-radius: 15px;
-    background-color: #1d9100;
-}
-
-#entry {
-    margin: 0px 0px;
-    border: none;
-    border-radius: 15px;
-    background-color: transparent;
+#entry:nth-child(even){
+    background-color: #404552;
 }
 
 #entry:selected {
-    margin: 0px 0px;
-    border: none;
-    border-radius: 15px;
-    background-color: #008118;
+    background-color: #5291e2;
+}
+
+#text:selected {
 }
