--- a/configs/waybar/style/style.css
+++ b/configs/waybar/style/style.css
@@ -26,6 +26,20 @@ tooltip label{
 }
 
 #workspaces button {
+    padding: 5px 10px;
+    color: #ffb291;
+    background-color: #1e1e1e;
+    margin-right: 3px;
+    border-radius: 5px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6);
+    transition: background-color 0.3s ease, text-shadow 0.3s ease;
+}
+#workspaces button:hover {
+    background-color: #ff4f81;
+    text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+}
+
+/* #workspaces button {
     padding: 0px;
     color: #ffb291;
     margin-right: 3px;
@@ -41,7 +55,7 @@ tooltip label{
     background: #11111b;
     color: #cdd6f4;
     border-radius: 2px;
-}
+} */
 
 #custom-launch_wofi,
 #custom-launch_firefox,
