--- a/configs/wofi/style/style.css
+++ b/configs/wofi/style/style.css
@@ -24,7 +24,7 @@ window {
     margin: 5px;
     padding: 20px;
     background-color: #000000;
-    border: 2px solid #00FF00; /* Bright Green */
+    border: 2px solid #009600; /* Bright Green */
     border-radius: 5px; /* Rounded corners */
 }
 
